no C<< <file> >> elements (which normally contain the Base64-encoded content
of the exported media documents). Also, when a media document is updated via
C<bric_soap media update>, if the XML file sent to the server contains no C<<
<file> >> elements, the existing file will be left alone, rather than deleted.
Suggested by Ashlee Caul. [David]

=back

=head2 Bug Fixes

=over

=item *

Cover dates are no longer exported with the wrong year (2009) when their dates
are in the first three days of 2010. Thanks to Paul Orrock for the spot (Bug
#122) and David Oliveira via Bret Dawson for the fix! [David]

=item *

Fixed an error in L<Bric::Biz::Contact> where a boolean value was not passed
to the database as a boolean. [David Oliveira]

=back

=head1 Version 1.11.2 (2009-11-14)

=head2 New Features

=over

=item *

Added configuration directive to allow the expiration of assets when they are
deleted. [David, Mercier, Rolf and Herring]

=item *

Added the C<publishing()>, C<previewing()>, and C<compiling()> sugar methods
to L<Bric::Util::Burner|Bric::Util::Burner> because I'm sick of seeing the
same code to check modes in templates all the time. [David]

=item *

Take keyword permissions into account when accessing or creating keywords from
the story and media profiles as well as category manager. [Adrian Yee]

=item *

Added support for copying and pasting elements in the story profile.
[Adrian Yee]

=item *

Added the C<find_or_create_alternate()> method to
L<Bric::Biz::Asset::Business::Media|Bric::Biz::Asset::Business::Media> class.
This method makes it easy for templates to create alternate representations of
an image as a new media document. Useful for generating thumbnails and the 
like. As a side-effect, L<Imager|Imager> is now a required module. [David]

=item *

Since L<Imager|Imager> is now a required module, the C<USE_THUMBNAILS>
directive is now enabled by default as well. [David]

=item *
